BE-Vinh-2: update booking status
